Job upload api updated
