# swagger.json
@@ -120,13 +120,28 @@
                 "operationId": "create a new analytics job",
                 "parameters": [
                     {
-                        "name": "payload",
+                        "name": "file",
+                        "in": "formData",
+                        "type": "file",
+                        "required": true
+                    },
+                    {
+                        "name": "framework",
+                        "in": "formData",
+                        "type": "string",
                         "required": true,
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/job"
-                        }
+                        "description": "Framework for the job"
+                    },
+                    {
+                        "name": "name",
+                        "in": "formData",
+                        "type": "string",
+                        "required": true,
+                        "description": "Name of the job"
                     }
+                ],
+                "consumes": [
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "job"
@@ -134,6 +149,28 @@
             }
         },
         "/topic/": {
+            "post": {
+                "responses": {
+                    "201": {
+                        "description": "New Kafka topic Created."
+                    }
+                },
+                "summary": "Creates a new Kafka Topic",
+                "operationId": "create a new Kafka topic",
+                "parameters": [
+                    {
+                        "name": "payload",
+                        "required": true,
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/topic_details"
+                        }
+                    }
+                ],
+                "tags": [
+                    "topic"
+                ]
+            },
             "get": {
                 "responses": {
                     "200": {
@@ -164,31 +201,31 @@
                 "tags": [
                     "topic"
                 ]
-            },
+            }
+        },
+        "/user/": {
             "post": {
                 "responses": {
                     "201": {
-                        "description": "New Kafka topic Created."
+                        "description": "User successfully created."
                     }
                 },
-                "summary": "Creates a new Kafka Topic",
-                "operationId": "create a new Kafka topic",
+                "summary": "Creates a new User",
+                "operationId": "create a new user",
                 "parameters": [
                     {
                         "name": "payload",
                         "required": true,
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/topic_details"
+                            "$ref": "#/definitions/user"
                         }
                     }
                 ],
                 "tags": [
-                    "topic"
+                    "user"
                 ]
-            }
-        },
-        "/user/": {
+            },
             "get": {
                 "responses": {
                     "200": {
@@ -214,28 +251,6 @@
                         "type": "string",
                         "format": "mask",
                         "description": "An optional fields mask"
-                    }
-                ],
-                "tags": [
-                    "user"
-                ]
-            },
-            "post": {
-                "responses": {
-                    "201": {
-                        "description": "User successfully created."
-                    }
-                },
-                "summary": "Creates a new User",
-                "operationId": "create a new user",
-                "parameters": [
-                    {
-                        "name": "payload",
-                        "required": true,
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/user"
-                        }
                     }
                 ],
                 "tags": [
